k8s/k8s/01-first-pod.yml
apiVersion: v1
kind: Pod

metadata:
  name: mysqlpod
  labels:
    app: mysql
    

spec:
  containers:
   - name: mysql
     image: mysql
     ports:
        - containerPort: 3306
#     envFrom:
#      - configMapRef:
#          name: mysqlcm
      
---
apiVersion: v1
kind: Pod

metadata:
  name: configserver
  labels:
    app: configserver
  
    

spec:
  containers:
   - name: configserver
     image: sivavalluru/config-server
     ports:
        - containerPort: 8071
       
---
