k8s/k8s/03-pod-usingconfigmap.yml
apiVersion: v1
kind: Pod

metadata:
  name: mysqlpod
  labels:
    app: mysql
    

spec:
  containers:
   - name: mysql
     image: mysql
     ports:
        - containerPort: 3306
---
