k8s/k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: configserver
spec:
  type: NodePort
  selector:
    app: configserver
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071
