k8s/k8s/podusingclaim.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mypod
  labels:
    name: frontendhttp
spec:
  containers:
    - name: myfrontend
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
      - mountPath: "/usr/share/nginx/html"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
       claimName: myclaim-1
---
apiVersion: v1
kind: Service
metadata:
  name: mypodservice
spec:
  type: NodePort
  selector:
    name: frontendhttp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
